<resources>
    <string name="app_name">AutoAdmin</string>
    <string name="title_login">Log in</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_contacts">Team</string>
    <string name="title_vacation">Request</string>
    <!-- Dummy strings -->
    <string name="dummy_short">I am texting</string>
    <string name="dummy_long">I am texting for much longer than previously</string>
    <string name="dummy_number">87074206969</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--  Home fragment strings  -->
    <string name="event_count">%d events</string>
    <string name="events_list">%s\n\n</string>
    <!--  Dashboard fragment strings  -->
    <string name="request_a_leave">Request a Leave</string>
    <string name="request_team_changes">Request Team changes</string>
    <string name="percentage_text">%d%%</string>
    <string name="production_progress">Production Progress</string>
    <string name="no_requests">No Requests to show</string>
    <!--  Vacation & Team request strings  -->
    <string name="start_date">Start date:\n%s</string>
    <string name="end_date">End date:\n%s</string>
    <string name="pick_starting_date">Pick a\nstarting date</string>
    <string name="pick_ending_date">Pick the\nending date</string>
    <string name="choose_the_option">Choose the option</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="vacation">Vacation</string>
    <string name="send_request">Send request</string>
    <string name="starting_date">Starting Date</string>
    <string name="select_date">Select Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="reason_for_leaving">Reason for leaving</string>

    <string-array name="leave_type_dropdown">
        <item>Sick Leave</item>
        <item>Vacation</item>
        <item>Paternity leave</item>
        <item>Maternity leave</item>
    </string-array>

    <string name="request_ok">Your request has been registered</string>

    <!-- ActionBar Options menu -->
    <string name="logout">Logout</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!--  Contacts fragment strings  -->
    <string name="contacts_name">%s %s - %s</string>
    <!-- Profile fragment strings -->
    <string name="department">Department: %s</string>
    <string name="team">Team: %s</string>
    <string name="email_copied">Email copied!</string>
    <string name="phone_copied">Phone copied!</string>
    <!--  General error strings  -->
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="error_unknown">Unknown error has happened</string>
    <string name="error_timeout">Server took too long to answer, please check your internet connection and try again</string>
    <string name="error_credentials">Please fill your credentials</string>
    <string name="error_not_filled">Please fill all the required fields</string>
    <string name="error_invalid_date">Please provide valid dates.\nStarting date should be at least after today.\nEnding date should be at least after starting date.</string>
    <string name="ok">OK</string>
</resources>